fix compass not appearing on respawn (dropped, left in chest etc.)